antlr/GramCompParser.cpp

// Generated from .\GramComp.g4 by ANTLR 4.7.1


#include "GramCompListener.h"
#include "GramCompVisitor.h"

#include "GramCompParser.h"


using namespace antlrcpp;
using namespace antlr4;

GramCompParser::GramCompParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

GramCompParser::~GramCompParser() {
  delete _interpreter;
}

std::string GramCompParser::getGrammarFileName() const {
  return "GramComp.g4";
}

const std::vector<std::string>& GramCompParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& GramCompParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ProgrammeContext ------------------------------------------------------------------

GramCompParser::ProgrammeContext::ProgrammeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<GramCompParser::IncludeContext *> GramCompParser::ProgrammeContext::include() {
  return getRuleContexts<GramCompParser::IncludeContext>();
}

GramCompParser::IncludeContext* GramCompParser::ProgrammeContext::include(size_t i) {
  return getRuleContext<GramCompParser::IncludeContext>(i);
}

std::vector<GramCompParser::DeclarationContext *> GramCompParser::ProgrammeContext::declaration() {
  return getRuleContexts<GramCompParser::DeclarationContext>();
}

GramCompParser::DeclarationContext* GramCompParser::ProgrammeContext::declaration(size_t i) {
  return getRuleContext<GramCompParser::DeclarationContext>(i);
}

std::vector<GramCompParser::DefinitionContext *> GramCompParser::ProgrammeContext::definition() {
  return getRuleContexts<GramCompParser::DefinitionContext>();
}

GramCompParser::DefinitionContext* GramCompParser::ProgrammeContext::definition(size_t i) {
  return getRuleContext<GramCompParser::DefinitionContext>(i);
}

std::vector<GramCompParser::FunctionContext *> GramCompParser::ProgrammeContext::function() {
  return getRuleContexts<GramCompParser::FunctionContext>();
}

GramCompParser::FunctionContext* GramCompParser::ProgrammeContext::function(size_t i) {
  return getRuleContext<GramCompParser::FunctionContext>(i);
}


size_t GramCompParser::ProgrammeContext::getRuleIndex() const {
  return GramCompParser::RuleProgramme;
}

void GramCompParser::ProgrammeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GramCompListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgramme(this);
}

void GramCompParser::ProgrammeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GramCompListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgramme(this);
}


antlrcpp::Any GramCompParser::ProgrammeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GramCompVisitor*>(visitor))
    return parserVisitor->visitProgramme(this);
  else
    return visitor->visitChildren(this);
}

GramCompParser::ProgrammeContext* GramCompParser::programme() {
  ProgrammeContext *_localctx = _tracker.createInstance<ProgrammeContext>(_ctx, getState());
  enterRule(_localctx, 0, GramCompParser::RuleProgramme);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(38);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << GramCompParser::T__7)
      | (1ULL << GramCompParser::T__12)
      | (1ULL << GramCompParser::CHAR)
      | (1ULL << GramCompParser::INT32_T)
      | (1ULL << GramCompParser::INT64_T))) != 0)) {
      setState(36);
      _errHandler->sync(this);
      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx)) {
      case 1: {
        setState(32);
        include();
        break;
      }

      case 2: {
        setState(33);
        declaration();
        break;
      }

      case 3: {
        setState(34);
        definition();
        break;
      }

      case 4: {
        setState(35);
        function();
        break;
      }

      }
      setState(40);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- InstructionContext ------------------------------------------------------------------

GramCompParser::InstructionContext::InstructionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t GramCompParser::InstructionContext::getRuleIndex() const {
  return GramCompParser::RuleInstruction;
}

void GramCompParser::InstructionContext::copyFrom(InstructionContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- Expression_instrContext ------------------------------------------------------------------

GramCompParser::ExpressionContext* GramCompParser::Expression_instrContext::expression() {
  return getRuleContext<GramCompParser::ExpressionContext>(0);
}

GramCompParser::Expression_instrContext::Expression_instrContext(InstructionContext *ctx) { copyFrom(ctx); }

void GramCompParser::Expression_instrContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GramCompListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterExpression_instr(this);
}
void GramCompParser::Expression_instrContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GramCompListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitExpression_instr(this);
}

antlrcpp::Any GramCompParser::Expression_instrContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GramCompVisitor*>(visitor))
    return parserVisitor->visitExpression_instr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- BreakContext ------------------------------------------------------------------

GramCompParser::BreakContext::BreakContext(InstructionContext *ctx) { copyFrom(ctx); }

void GramCompParser::BreakContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GramCompListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBreak(this);
}
void GramCompParser::BreakContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GramCompListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBreak(this);
}

antlrcpp::Any GramCompParser::BreakContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GramCompVisitor*>(visitor))
    return parserVisitor->visitBreak(this);
  else
    return visitor->visitChildren(this);
}
//----------------- FucntioncallContext ------------------------------------------------------------------

tree::TerminalNode* GramCompParser::FucntioncallContext::IDENTIFIER() {
  return getToken(GramCompParser::IDENTIFIER, 0);
}

std::vector<GramCompParser::ExpressionContext *> GramCompParser::FucntioncallContext::expression() {
  return getRuleContexts<GramCompParser::ExpressionContext>();
}

GramCompParser::ExpressionContext* GramCompParser::FucntioncallContext::expression(size_t i) {
  return getRuleContext<GramCompParser::ExpressionContext>(i);
}

GramCompParser::FucntioncallContext::FucntioncallContext(InstructionContext *ctx) { copyFrom(ctx); }

void GramCompParser::FucntioncallContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GramCompListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFucntioncall(this);
}
void GramCompParser::FucntioncallContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GramCompListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFucntioncall(this);
}

antlrcpp::Any GramCompParser::FucntioncallContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GramCompVisitor*>(visitor))
    return parserVisitor->visitFucntioncall(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ContinueContext ------------------------------------------------------------------

GramCompParser::ContinueContext::ContinueContext(InstructionContext *ctx) { copyFrom(ctx); }

void GramCompParser::ContinueContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GramCompListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterContinue(this);
}
void GramCompParser::ContinueContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GramCompListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitContinue(this);
}

antlrcpp::Any GramCompParser::ContinueContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GramCompVisitor*>(visitor))
    return parserVisitor->visitContinue(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Semicolon_instrContext ------------------------------------------------------------------

GramCompParser::Semicolon_instrContext::Semicolon_instrContext(InstructionContext *ctx) { copyFrom(ctx); }

void GramCompParser::Semicolon_instrContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GramCompListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSemicolon_instr(this);
}
void GramCompParser::Semicolon_instrContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GramCompListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSemicolon_instr(this);
}

antlrcpp::Any GramCompParser::Semicolon_instrContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GramCompVisitor*>(visitor))
    return parserVisitor->visitSemicolon_instr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Structure_instrContext ------------------------------------------------------------------

GramCompParser::StructureContext* GramCompParser::Structure_instrContext::structure() {
  return getRuleContext<GramCompParser::StructureContext>(0);
}

GramCompParser::Structure_instrContext::Structure_instrContext(InstructionContext *ctx) { copyFrom(ctx); }

void GramCompParser::Structure_instrContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GramCompListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStructure_instr(this);
}
void GramCompParser::Structure_instrContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GramCompListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStructure_instr(this);
}

antlrcpp::Any GramCompParser::Structure_instrContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GramCompVisitor*>(visitor))
    return parserVisitor->visitStructure_instr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ReturnContext ------------------------------------------------------------------

GramCompParser::ExpressionContext* GramCompParser::ReturnContext::expression() {
  return getRuleContext<GramCompParser::ExpressionContext>(0);
}

GramCompParser::ReturnContext::ReturnContext(InstructionContext *ctx) { copyFrom(ctx); }

void GramCompParser::ReturnContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GramCompListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterReturn(this);
}
void GramCompParser::ReturnContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GramCompListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitReturn(this);
}

antlrcpp::Any GramCompParser::ReturnContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GramCompVisitor*>(visitor))
    return parserVisitor->visitReturn(this);
  else
    return visitor->visitChildren(this);
}
GramCompParser::InstructionContext* GramCompParser::instruction() {
  InstructionContext *_localctx = _tracker.createInstance<InstructionContext>(_ctx, getState());
  enterRule(_localctx, 2, GramCompParser::RuleInstruction);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(68);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
    case 1: {
      _localctx = dynamic_cast<InstructionContext *>(_tracker.createInstance<GramCompParser::BreakContext>(_localctx));
      enterOuterAlt(_localctx, 1);
      setState(41);
      match(GramCompParser::T__0);
      setState(42);
      match(GramCompParser::T__1);
      break;
    }

    case 2: {
      _localctx = dynamic_cast<InstructionContext *>(_tracker.createInstance<GramCompParser::ContinueContext>(_localctx));
      enterOuterAlt(_localctx, 2);
      setState(43);
      match(GramCompParser::T__2);
      setState(44);
      match(GramCompParser::T__1);
      break;
    }

    case 3: {
      _localctx = dynamic_cast<InstructionContext *>(_tracker.createInstance<GramCompParser::Structure_instrContext>(_localctx));
      enterOuterAlt(_localctx, 3);
      setState(45);
      structure();
      break;
    }

    case 4: {
      _localctx = dynamic_cast<InstructionContext *>(_tracker.createInstance<GramCompParser::FucntioncallContext>(_localctx));
      enterOuterAlt(_localctx, 4);
      setState(46);
      match(GramCompParser::IDENTIFIER);
      setState(47);
      match(GramCompParser::T__3);
      setState(56);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if ((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & ((1ULL << GramCompParser::T__3)
        | (1ULL << GramCompParser::T__16)
        | (1ULL << GramCompParser::T__17)
        | (1ULL << GramCompParser::T__33)
        | (1ULL << GramCompParser::T__34)
        | (1ULL << GramCompParser::IDENTIFIER)
        | (1ULL << GramCompParser::STRING_LITERAL)
        | (1ULL << GramCompParser::CHAR_LITERAL)
        | (1ULL << GramCompParser::INTEGER))) != 0)) {
        setState(48);
        expression(0);
        setState(53);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while (_la == GramCompParser::T__4) {
          setState(49);
          match(GramCompParser::T__4);
          setState(50);
          expression(0);
          setState(55);
          _errHandler->sync(this);
          _la = _input->LA(1);
        }
      }
      setState(58);
      match(GramCompParser::T__5);
      setState(59);
      match(GramCompParser::T__1);
      break;
    }

    case 5: {
      _localctx = dynamic_cast<InstructionContext *>(_tracker.createInstance<GramCompParser::ReturnContext>(_localctx));
      enterOuterAlt(_localctx, 5);
      setState(60);
      match(GramCompParser::T__6);
      setState(61);
      expression(0);
      setState(62);
      match(GramCompParser::T__1);
      break;
    }

    case 6: {
      _localctx = dynamic_cast<InstructionContext *>(_tracker.createInstance<GramCompParser::Expression_instrContext>(_localctx));
      enterOuterAlt(_localctx, 6);
      setState(64);
      expression(0);
      setState(65);
      match(GramCompParser::T__1);
      break;
    }

    case 7: {
      _localctx = dynamic_cast<InstructionContext *>(_tracker.createInstance<GramCompParser::Semicolon_instrContext>(_localctx));
      enterOuterAlt(_localctx, 7);
      setState(67);
      match(GramCompParser::T__1);
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IncludeContext ------------------------------------------------------------------

GramCompParser::IncludeContext::IncludeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t GramCompParser::IncludeContext::getRuleIndex() const {
  return GramCompParser::RuleInclude;
}

void GramCompParser::IncludeContext::copyFrom(IncludeContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- IncludeCrochContext ------------------------------------------------------------------

tree::TerminalNode* GramCompParser::IncludeCrochContext::STRING_LITERAL() {
  return getToken(GramCompParser::STRING_LITERAL, 0);
}

GramCompParser::IncludeCrochContext::IncludeCrochContext(IncludeContext *ctx) { copyFrom(ctx); }

void GramCompParser::IncludeCrochContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GramCompListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterIncludeCroch(this);
}
void GramCompParser::IncludeCrochContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GramCompListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitIncludeCroch(this);
}

antlrcpp::Any GramCompParser::IncludeCrochContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GramCompVisitor*>(visitor))
    return parserVisitor->visitIncludeCroch(this);
  else
    return visitor->visitChildren(this);
}
//----------------- IncludeGuillContext ------------------------------------------------------------------

tree::TerminalNode* GramCompParser::IncludeGuillContext::STRING_LITERAL() {
  return getToken(GramCompParser::STRING_LITERAL, 0);
}

GramCompParser::IncludeGuillContext::IncludeGuillContext(IncludeContext *ctx) { copyFrom(ctx); }

void GramCompParser::IncludeGuillContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GramCompListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterIncludeGuill(this);
}
void GramCompParser::IncludeGuillContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GramCompListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitIncludeGuill(this);
}

antlrcpp::Any GramCompParser::IncludeGuillContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GramCompVisitor*>(visitor))
    return parserVisitor->visitIncludeGuill(this);
  else
    return visitor->visitChildren(this);
}
GramCompParser::IncludeContext* GramCompParser::include() {
  IncludeContext *_localctx = _tracker.createInstance<IncludeContext>(_ctx, getState());
  enterRule(_localctx, 4, GramCompParser::RuleInclude);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(80);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx)) {
    case 1: {
      _localctx = dynamic_cast<IncludeContext *>(_tracker.createInstance<GramCompParser::IncludeCrochContext>(_localctx));
      enterOuterAlt(_localctx, 1);
      setState(70);
      match(GramCompParser::T__7);
      setState(71);
      match(GramCompParser::T__8);
      setState(72);
      match(GramCompParser::T__9);
      setState(73);
      match(GramCompParser::STRING_LITERAL);
      setState(74);
      match(GramCompParser::T__10);
      break;
    }

    case 2: {
      _localctx = dynamic_cast<IncludeContext *>(_tracker.createInstance<GramCompParser::IncludeGuillContext>(_localctx));
      enterOuterAlt(_localctx, 2);
      setState(75);
      match(GramCompParser::T__7);
      setState(76);
      match(GramCompParser::T__8);
      setState(77);
      match(GramCompParser::T__11);
      setState(78);
      match(GramCompParser::STRING_LITERAL);
      setState(79);
      match(GramCompParser::T__11);
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunctionContext ------------------------------------------------------------------

GramCompParser::FunctionContext::FunctionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t GramCompParser::FunctionContext::getRuleIndex() const {
  return GramCompParser::RuleFunction;
}

void GramCompParser::FunctionContext::copyFrom(FunctionContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- Function_defContext ------------------------------------------------------------------

tree::TerminalNode* GramCompParser::Function_defContext::IDENTIFIER() {
  return getToken(GramCompParser::IDENTIFIER, 0);
}

GramCompParser::TypeContext* GramCompParser::Function_defContext::type() {
  return getRuleContext<GramCompParser::TypeContext>(0);
}

GramCompParser::ArgsContext* GramCompParser::Function_defContext::args() {
  return getRuleContext<GramCompParser::ArgsContext>(0);
}

std::vector<GramCompParser::Function_initContext *> GramCompParser::Function_defContext::function_init() {
  return getRuleContexts<GramCompParser::Function_initContext>();
}

GramCompParser::Function_initContext* GramCompParser::Function_defContext::function_init(size_t i) {
  return getRuleContext<GramCompParser::Function_initContext>(i);
}

std::vector<GramCompParser::InstructionContext *> GramCompParser::Function_defContext::instruction() {
  return getRuleContexts<GramCompParser::InstructionContext>();
}

GramCompParser::InstructionContext* GramCompParser::Function_defContext::instruction(size_t i) {
  return getRuleContext<GramCompParser::InstructionContext>(i);
}

GramCompParser::Function_defContext::Function_defContext(FunctionContext *ctx) { copyFrom(ctx); }

void GramCompParser::Function_defContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GramCompListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFunction_def(this);
}
void GramCompParser::Function_defContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GramCompListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFunction_def(this);
}

antlrcpp::Any GramCompParser::Function_defContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GramCompVisitor*>(visitor))
    return parserVisitor->visitFunction_def(this);
  else
    return visitor->visitChildren(this);
}
GramCompParser::FunctionContext* GramCompParser::function() {
  FunctionContext *_localctx = _tracker.createInstance<FunctionContext>(_ctx, getState());
  enterRule(_localctx, 6, GramCompParser::RuleFunction);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    _localctx = dynamic_cast<FunctionContext *>(_tracker.createInstance<GramCompParser::Function_defContext>(_localctx));
    enterOuterAlt(_localctx, 1);
    setState(84);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case GramCompParser::CHAR:
      case GramCompParser::INT32_T:
      case GramCompParser::INT64_T: {
        setState(82);
        type();
        break;
      }

      case GramCompParser::T__12: {
        setState(83);
        match(GramCompParser::T__12);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
    setState(86);
    match(GramCompParser::IDENTIFIER);
    setState(87);
    match(GramCompParser::T__3);
    setState(89);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << GramCompParser::T__12)
      | (1ULL << GramCompParser::CHAR)
      | (1ULL << GramCompParser::INT32_T)
      | (1ULL << GramCompParser::INT64_T))) != 0)) {
      setState(88);
      args();
    }
    setState(91);
    match(GramCompParser::T__5);
    setState(92);
    match(GramCompParser::T__13);
    setState(96);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << GramCompParser::CHAR)
      | (1ULL << GramCompParser::INT32_T)
      | (1ULL << GramCompParser::INT64_T))) != 0)) {
      setState(93);
      function_init();
      setState(98);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(102);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << GramCompParser::T__0)
      | (1ULL << GramCompParser::T__1)
      | (1ULL << GramCompParser::T__2)
      | (1ULL << GramCompParser::T__3)
      | (1ULL << GramCompParser::T__6)
      | (1ULL << GramCompParser::T__16)
      | (1ULL << GramCompParser::T__17)
      | (1ULL << GramCompParser::T__24)
      | (1ULL << GramCompParser::T__25)
      | (1ULL << GramCompParser::T__33)
      | (1ULL << GramCompParser::T__34)
      | (1ULL << GramCompParser::IDENTIFIER)
      | (1ULL << GramCompParser::STRING_LITERAL)
      | (1ULL << GramCompParser::CHAR_LITERAL)
      | (1ULL << GramCompParser::INTEGER))) != 0)) {
      setState(99);
      instruction();
      setState(104);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(105);
    match(GramCompParser::T__14);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ArgsContext ------------------------------------------------------------------

GramCompParser::ArgsContext::ArgsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t GramCompParser::ArgsContext::getRuleIndex() const {
  return GramCompParser::RuleArgs;
}

void GramCompParser::ArgsContext::copyFrom(ArgsContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- Args_listContext ------------------------------------------------------------------

std::vector<GramCompParser::TypeContext *> GramCompParser::Args_listContext::type() {
  return getRuleContexts<GramCompParser::TypeContext>();
}

GramCompParser::TypeContext* GramCompParser::Args_listContext::type(size_t i) {
  return getRuleContext<GramCompParser::TypeContext>(i);
}

std::vector<tree::TerminalNode *> GramCompParser::Args_listContext::IDENTIFIER() {
  return getTokens(GramCompParser::IDENTIFIER);
}

tree::TerminalNode* GramCompParser::Args_listContext::IDENTIFIER(size_t i) {
  return getToken(GramCompParser::IDENTIFIER, i);
}

GramCompParser::Args_listContext::Args_listContext(ArgsContext *ctx) { copyFrom(ctx); }

void GramCompParser::Args_listContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GramCompListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterArgs_list(this);
}
void GramCompParser::Args_listContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GramCompListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitArgs_list(this);
}

antlrcpp::Any GramCompParser::Args_listContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GramCompVisitor*>(visitor))
    return parserVisitor->visitArgs_list(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Void_argContext ------------------------------------------------------------------

GramCompParser::Void_argContext::Void_argContext(ArgsContext *ctx) { copyFrom(ctx); }

void GramCompParser::Void_argContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GramCompListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVoid_arg(this);
}
void GramCompParser::Void_argContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GramCompListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVoid_arg(this);
}

antlrcpp::Any GramCompParser::Void_argContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GramCompVisitor*>(visitor))
    return parserVisitor->visitVoid_arg(this);
  else
    return visitor->visitChildren(this);
}
GramCompParser::ArgsContext* GramCompParser::args() {
  ArgsContext *_localctx = _tracker.createInstance<ArgsContext>(_ctx, getState());
  enterRule(_localctx, 8, GramCompParser::RuleArgs);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(119);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case GramCompParser::T__12: {
        _localctx = dynamic_cast<ArgsContext *>(_tracker.createInstance<GramCompParser::Void_argContext>(_localctx));
        enterOuterAlt(_localctx, 1);
        setState(107);
        match(GramCompParser::T__12);
        break;
      }

      case GramCompParser::CHAR:
      case GramCompParser::INT32_T:
      case GramCompParser::INT64_T: {
        _localctx = dynamic_cast<ArgsContext *>(_tracker.createInstance<GramCompParser::Args_listContext>(_localctx));
        enterOuterAlt(_localctx, 2);
        setState(108);
        type();
        setState(109);
        match(GramCompParser::IDENTIFIER);
        setState(116);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while (_la == GramCompParser::T__4) {
          setState(110);
          match(GramCompParser::T__4);
          setState(111);
          type();
          setState(112);
          match(GramCompParser::IDENTIFIER);
          setState(118);
          _errHandler->sync(this);
          _la = _input->LA(1);
        }
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Function_initContext ------------------------------------------------------------------

GramCompParser::Function_initContext::Function_initContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t GramCompParser::Function_initContext::getRuleIndex() const {
  return GramCompParser::RuleFunction_init;
}
